# dss-solar-selc

./: .gitignore  .pre-commit-config.yaml  README.md  aggregate.py  custom_network.py  ec.py  eec.py  main.py  mercom.py  nleec.py  pvmag.py  pvmag_global.py  pvmag_usa.py  pyproject.toml  requirements.txt  saur.py  scrapper.py  setup.cfg  transform.py
categorize/: custom_gemma.py  solar_classifier_gemma.py  solar_classifier_mistral.py
categorize/config/: solar_config.cfg
categorize/glove/: corpus_preprocess.py  corpus_test.ipynb  corpus_train.py
categorize/solar/: custom_llama3.py  custom_mistral.py  solar_classifier_gemma.py  solar_classifier_llama.py  train_classifier.py
categorize/solar/config/: examples.json  large_examples.json  theme_config.cfg
categorize/solar/grammar/: solar_grammar.gbnf  solar_grammar.json
categorize/theme/: run_gemma.sh  run_llama.sh  run_mistral.sh  run_mistral_nemo.sh  run_phi.sh  theme_prompt.txt
categorize/theme/code/: gemma.py  llama.py  mistral.py  mistral_nemo.py  phi.py
categorize/theme/grammar/: theme_grammar.gbnf  theme_grammar.json
categorize/theme/server/: gemma.sh  llama.sh  mistral.sh  mistral_nemo.sh  phi.sh
dump/scraper/: articles.parquet
dump/scraper/ec/: hybrid.json  renewable-regulation.json  solar.json
dump/scraper/eec/: all-news.json  coal-news.json  companies-news.json  economy-news.json  environment-news.json  oil-news.json  power-news.json  renewable-news.json
dump/scraper/mercom/: mercom.json
dump/scraper/nleec/: economy.json  environment.json  errors.json  newsletter.json  oil.json
dump/scraper/pvmag/: pvmag.json
dump/scraper/saur/: saur.json
dump/scrapper/ec/: hybrid.json  solar.json
dump/scrapper/eec/: all-news.json  economy-news.json
src/dss_selc/: utils.py
src/dss_selc/data_transform/: data_processor.py  transform.py
src/dss_selc/scraper/: __init__.py  ec.py  eec.py  mercom.py  nleec.py  pvmag.py  pvmag_global.py  pvmag_usa.py  saur.py
src/dss_selc/utils/: __init__.py
