[metadata]
name = dss_selc
version = attr: dss_selc.__version__
description = "Decision Support System for Solar Solutions"
author = Anurag Shukla
author_email = 202318039@daiict.ac.in
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    Solar
    Decision Support
    Renewable Enerygy
platforms = linux

[options]
packages =
    dss_selc
install_requires =
    accelerate==0.33.0
    beautifulsoup4==4.12.3
    black==24.4.2
    bs4==0.0.2
    datasets==2.20.0
    en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
    fastparquet==2024.5.0
    flake8==7.1.0
    gensim==4.3.3
    huggingface-hub==0.24.1
    ipykernel==6.29.5
    isort==5.13.2
    jupyter==1.0.0
    keras==3.4.1
    keras-tuner==1.4.7
    matplotlib==3.9.1
    matplotlib-inline==0.1.7
    missingno==0.5.2
    msgpack-python==0.5.6
    pandas==2.2.2
    parquet_tools==0.2.16
    pre-commit==3.7.1
    plotly==5.23.0
    PySocks==1.7.1
    requests==2.32.3
    scikit-learn==1.5.1
    seaborn==0.13.2
    spacy==3.7.5
    statsmodels==0.14.2
    tensorflow==2.17.0
    tensorflow-cpu==2.17.0
    tf_keras==2.17.0
    torch==2.4.0
    torchaudio==2.4.0
    torchvision==0.19.0
    transformers==4.43.1

python_requires = >=3.9
package_dir =
    =src

[flake8]
unused_arguments_ignore_variadic_names = True
max_line_length = 88
max_annotations_complexity = 5

ignore =
    # Missing type annotation for self in method.
    ANN101


[isort]
profile = black
line_length = 88
